--- a/lviv.html
+++ b/lviv.html
@@ -176,8 +176,8 @@
                 <li>Русскоязычных школ нет (есть вроде при посольстве).
                     Если в школе есть еще классы русскоязычные, то 3 класс и выше.
                     Там обучение на русском и украинском</li>
-                <li>Школы частные 9000-10000 гривен в мес. Они говорят 6-7 тыс, а плюс питание выходит 9-10, узнавала.
-                    У беларускіх школах з 3 класа толькі ангельская, а ва украінскіх в першага класа
+                <li>Школы частные 9000-10000 гривен в мес. Обучение 6-7 тыс плюс питание и выходит 9-10.
+                    В украинских школах иностранные языки дети учат с 1 класса.
                     <span>@Catherine</span></li>
                 <li>Детям вообще не нужна регистрация в Украине. Для школы, тем более. В школу берут
                     всех по закону. Без ИНН и справок, только свидетельство о рождении. В частную могут попросить виж,
