--- a/rent.html
+++ b/rent.html
@@ -116,6 +116,12 @@
           <i class="fab fa-facebook"></i>orendra</a>
         <p class="text">ОРЕНДА КВАРТИР ЛЬВІВ БЕЗ ПОСЕРЕДНИКІВ. Общедоступная группа. Участники: 48,5 тыс.</p>
       </div>
+      <div class="links">
+        <a href="https://instagram.com/no.makler.lviv?utm_medium=copy_link" class="link" target="blank">
+          <i class="fab fa-instagram-square"></i>no.makler.lviv</a>
+        <p class="text">ОРЕНДА КВАРТИР • NO MAKLER • ЩОДЕННЕ ОНОВЛЕННЯ ОГОЛОШЕНЬ 7 565
+          подписчиков.</p>
+      </div>
     </div>
 
 
