--- a/visas.html
+++ b/visas.html
@@ -53,29 +53,64 @@
         </div>
     </header>
     <section class="container entry__section">
-        <h2>Гуманитарная виза</h2>
-        <p class="text">Страховку можно купить за 900 грн возле польского консульства.</p>
-        <p class="text">Тут <a href="https://t.me/belaruscentrlviv/163" class="link"><i
-                    class="fab fa-telegram"></i>t.me/belaruscentrlviv</a> пошагово расписано как подаваться в польское
-            консульство <span>в Львове</span>.
-            Для тех кто в Киеве или других городах самостоятельно найдите адрес посольства.</p>
-
-        <h2>Виза Poland.Business Harbour</h2>
+        <h2>Виза в Польшу</h2>
         <div class="links">
-            <a href="https://www.gov.pl/web/poland-businessharbour-ru" class="link" target="Blank"><i
-                    class="fas fa-link"></i>
-                Сайт Республики Польша/Виза PBH</a>
+            <a href="https://visa.vfsglobal.com/ukr/uk/pol/" class="link" target="Blank"><i class="fas fa-link"></i>
+                Компанія VFS Global – офіційний партнер Посольства Республіки Польща в Україні</a>
         </div>
+        <h3>Гуманитарная виза</h3>
+        <h4>Информация от пользователя <span>@Миша 2403040</span></h4>
+        <ul>
+            <li>Делают минимум за 7 дней, с понед. до понед.</li>
+            <li>Почта для отправки документов wiza.lwow@msz.gov.pl</li>
+            <li>примерно через неделю, после отправки письма, назначили на приём документов по адресу: Львов, ул.
+                Джерельная, 18
+            </li>
+        </ul>
+        <p class="text">Тут можете скачать документ,<a href="https://t.me/belaruscentrlviv/163" class="link"
+                target="Blank"><i class="fab fa-telegram"></i>t.me/belaruscentrlviv</a> где пошагово расписано как
+            подаваться в польское консульство во Львове. Для тех кто в Киеве или других городах самостоятельно найдите
+            адрес посольства.<br>
+            <span>Информация устарела, сейчас документы принимают на Джерельной 18, где находится
+                визовый центр vfs. Уточняйте, пожалуйста!</span></p>
+        <h3>Виза Poland.Business Harbour</h3>
+        <h4>На сайте <a href="https://www.gov.pl/web/poland-businessharbour-ru" class="link" target="Blank"><i
+                    class="fas fa-link"></i>
+                Сайт Республики Польша/Виза PBH</a> вы найдете всю нужную информацию.</h4>
+        <ol>
+            <li>Свяжитесь с польским консульством либо с визовым центром Польши и заполните визовую анкету. </li>
+            <li>После согласования даты визита визовую анкету можно подать непосредственно в консульстве или в одном из
+                визовых центров (сервисный сбор составляет 11 евро)</li>
+            <li>Если вы хотите приехать с семьей, сразу сообщите об этом консулу.</li>
+            <li>Подготовьте необходимые документы. Если вы планируете уехать с семьей, такой же комплект документов
+                необходимо подать на супругу/супруга и детей.</li>
+            <li>После положительного рассмотрения документов, вы получите национальную визу. С ней вы сможете пересечь
+                границу.</li>
+        </ol>
+        <h3>Национальная виза D по Карте Поляка</h3>
+        <p class="text">По карте поляка без проблем можно получить визу, но надо иметь ВНЖ, без ВНЖ не дают
+            <span>@j_user51</span></p>
         <h3>Чат Польши:</h3>
-        <p class="text">Для тех, кто переезжает в Польшу по программе Poland.Business Harbour <span>из Беларуси</span>
+        <p class="text">Для тех, кто переезжает в Польшу по программе Poland.Business Harbour <span>из
+                Беларуси</span>
             <a href="https://t.me/PBH_BY2PLN" class="link" target="Blank"><i class="fab fa-telegram"></i>
                 https://t.me/PBH_BY2PLN</a>.
         </p>
         <h3>Чат Украины:</h3>
-        <p class="text">Для тих, хто переїздить до Польщі за програмою Poland.Business Harbour <span>з України</span> <a
-                href="https://t.me/PBH_UA2PLN" class="link" target="Blank"><i class="fab fa-telegram"></i>
+        <p class="text">Для тих, хто переїздить до Польщі за програмою Poland.Business Harbour <span>з
+                України</span> <a href="https://t.me/PBH_UA2PLN" class="link" target="Blank"><i
+                    class="fab fa-telegram"></i>
                 https://t.me/PBH_UA2PLN</a>.
         </p>
+        <h3>Про биометрические карты</h3>
+        <h4>Информация от пользователя <span>@Denis</span></h4>
+        <p class="text">
+            <span>Вопрос</span>: Можно ли выезжать в Польшу, если на руках старый анулированный паспорт с мультивизой и
+            новый
+            биометрический.
+            Позвонил в посольство, там направили к страже граничной. Написал им, <span>официальный ответ</span> – так
+            ездить
+            можно и законно, это стандартная процедура. Только следить чтобы в старом не испортили действующую визу.</p>
     </section>
 </body>
 
