--- a/visas.html
+++ b/visas.html
@@ -12,9 +12,9 @@
     <script src="https://kit.fontawesome.com/98db508811.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link
+    <!-- <link
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap"
-        rel="stylesheet">
+        rel="stylesheet"> -->
     <link rel="stylesheet" href="css/style.css">
     <title>Виза в Польшу</title>
 </head>
@@ -74,9 +74,10 @@
             <span>Информация устарела, сейчас документы принимают на Джерельной 18, где находится
                 визовый центр vfs. Уточняйте, пожалуйста!</span></p>
         <h3>Виза Poland.Business Harbour</h3>
-        <h4>На сайте <a href="https://www.gov.pl/web/poland-businessharbour-ru" class="link" target="Blank"><i
-                    class="fas fa-link"></i>
-                Сайт Республики Польша/Виза PBH</a> вы найдете всю нужную информацию.</h4>
+        <p class="text">На сайте вы найдете всю нужную информацию.
+            <a href="https://www.gov.pl/web/poland-businessharbour-ru" class="link" target="Blank"><i
+                    class="fas fa-link"></i>Сайт Республики Польша/Виза PBH</a>
+        </p>
         <ol>
             <li>Свяжитесь с польским консульством либо с визовым центром Польши и заполните визовую анкету. </li>
             <li>После согласования даты визита визовую анкету можно подать непосредственно в консульстве или в одном из
