--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
   <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link
+  <!-- <link
     href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap"
-    rel="stylesheet">
+    rel="stylesheet"> -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
@@ -124,19 +124,18 @@
     <p class="text">Также акции в воскресенье не разрешены.</p> -->
 
   </section>
-
-  <footer class="container footer__section">
-    <p class="about">Контент для сайта взят на основании
-      <a href="https://docs.google.com/document/d/1SubsQeAm-wpspnxqQE3MNbXRYWxPuCvB0utG08wojWQ/edit?usp=sharing"
-        class="link" target="blank"><i class="fas fa-link"></i> Гугл Дока</a>
-      и вопросов-ответов в чате
-      <a href="https://t.me/bellviv" class="link" target="blank"><i class="fab fa-telegram"></i> Беларусы ў Львове</a>
-    </p>
-    <p class="text">Чат-бот для контакта: <a href="https://t.me/lvivsupolka_by_bot" class="link" target="blank"><i
-          class="fab fa-telegram"></i>
-        telegram</a></p>
-
-
+  <footer class="container">
+    <div class="footer__section">
+      <p class="footer__about">Контент для сайта взят на основании
+        <a href="https://docs.google.com/document/d/1SubsQeAm-wpspnxqQE3MNbXRYWxPuCvB0utG08wojWQ/edit?usp=sharing"
+          class="link" target="blank"><i class="fas fa-link"></i> Гугл Дока</a>
+        и вопросов-ответов в чате
+        <a href="https://t.me/bellviv" class="link" target="blank"><i class="fab fa-telegram"></i> Беларусы ў Львове</a>
+      </p>
+      <p class="footer__text">Чат-бот для контакта: <a href="https://t.me/lvivsupolka_by_bot" class="link"
+          target="blank"><i class="fab fa-telegram"></i>
+          telegram</a></p>
+    </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
