--- a/visas.html
+++ b/visas.html
@@ -53,7 +53,7 @@
         </div>
     </header>
     <section class="container entry__section">
-        <h2>Виза в Польшу</h2>
+        <h1>Польские визы</h1>
         <div class="links">
             <a href="https://visa.vfsglobal.com/ukr/uk/pol/" class="link" target="Blank"><i class="fas fa-link"></i>
                 Компанія VFS Global – офіційний партнер Посольства Республіки Польща в Україні</a>
