--- a/legalisation.html
+++ b/legalisation.html
@@ -62,7 +62,7 @@
         <h3>Нотариально заверенные переводы</h3>
       </label>
       <div class="subsection">
-        <p class="text">Компаний, делающих нотариально заверенные переводы, в городе гораздо больше.<br>
+        <p class="demo__text">Компаний, делающих нотариально заверенные переводы, в городе гораздо больше.<br>
           Здесь указаны примеры таких компаний в центре Львова, услугами которых уже неоднократно пользовались.</p>
         <ul>
           <li>Галерея мов - вул. Дорошенка 31/34<br>
@@ -87,11 +87,11 @@
           <a href="https://telegra.ph/Neobhodimost-apostilirovaniya-belorusskih-dokumentov-09-01" class="link"
             target="blank"><i class="fas fa-link"></i>telegra.ph/Neobhodimost...</a>
         </div>
-        <p class="text">
+        <p class="demo__text">
           "Если бы у меня было хоть какое-то время, чтобы подготовиться к отъезду из Беларуси, я бы начала с
           апостилирования всех важных свидетельств и отдельных справок"</p>
-        <p class="text">Почему нужно апостилировать?</p>
-        <p class="text">Апостиль – это своего рода международное удостоверение легального происхождения документа.
+        <p class="demo__text">Почему нужно апостилировать?</p>
+        <p class="demo__text">Апостиль – это своего рода международное удостоверение легального происхождения документа.
           Апостиль делается
           только в стране выдачи документа обычно через Министерство юстиции или Министерство образования (дипломы).
           Конечно, можно делать через посольство. Но сразу два «Но». Во-первых, дорого. В Минске, Бресте, Гомеле
@@ -99,7 +99,8 @@
           другой стране (в нашем случае Украина) любой док потянет от 35€ (1 страница). И время тик-так. Вам горит
           (например, заканчивается срок пребывания), а такие вещи традиционно делают в самом лучшем случае от месяца
           до трех.</p>
-        <p class="text">С 2019 года в Украине любой белорусский не апостилированный док – просто бумажка (и в МИД, и в
+        <p class="demo__text">С 2019 года в Украине любой белорусский не апостилированный док – просто бумажка (и в МИД,
+          и в
           миграционке,
           и вдругих официальных инстанциях). С чем, собственно, можно белорусов грустно поздравить. Объясню почему.
           Лукашенко на кого-то там заточил зуб, а потому приказал в одностороннем порядке разорвать договор с Украиной
@@ -123,7 +124,7 @@
           </li>
         </ul>
         <h3>Как действовать, чтобы легитимизировать в Беларуси документ, составленный в Украине.</h3>
-        <p class="text">На примере генеральной доверенности:</p>
+        <p class="demo__text">На примере генеральной доверенности:</p>
         <ul>
           <li>Составить у украинского нотариуса документ на украинском;</li>
           <li>Перевести сразу же у того же украинского нотариуса на русский;</li>
@@ -200,18 +201,17 @@
       </label>
       <div class="subsection">
         <h5>Набор инструкций, советов и полезных ссылок по самостоятельному оформлению
-          документов в Украине (Временный ВНЖ, постоянный ВНЖ, ФОП)</h5>
-        <div class="links">
+          документов в Украине (Временный ВНЖ, постоянный ВНЖ, ФОП):
           <a href="https://immigration2ukraine.org" class="link" target="blank"><i class="fas fa-link"></i>
             immigration2ukraine.org</a>
-        </div>
+        </h5>
         <h3>ВНЖ<br>
           <h4>Информация взята на канале <span>@by_help_Kiev</span></span>
           </h4>
-          <p class="text">Осенью 2020 года правительство Украины объявила о скорых изменениях, направленных на
+          <p class="demo__text">Осенью 2020 года правительство Украины объявила о скорых изменениях, направленных на
             либерализацию процесса
             легализации граждан Беларуси в Украине. </p>
-          <p class="text">Среди данных мер было определено следующее:</p>
+          <p class="demo__text">Среди данных мер было определено следующее:</p>
           <ul>
             <li>Ускорение до 3 дней срока оформления бланка временного ВНЖ.</li>
             <li>Упрощение процедуры регистрации предпринимателем граждан Беларуси.</li>
@@ -219,10 +219,10 @@
           </ul>
 
           <h3>Срок действия ВНЖ</h3>
-          <p class="text">По общему правилу срок действия временного ВНЖ – 1 год</p>
+          <p class="demo__text">По общему правилу срок действия временного ВНЖ – 1 год</p>
 
           <h3>Документы для оформления ВНЖ</h3>
-          <p class="text">
+          <p class="demo__text">
             Перечень документов, необходимых для оформления временного вида на жительство можно разделить на два вида:
             общий и специальный.
           </p>
@@ -248,7 +248,7 @@
           </ul>
 
           <h3>Порядок оформления ВНЖ</h3>
-          <p class="text">Оформление ВНЖ в Украине осуществляют органы Государственной миграционной службы. Прием
+          <p class="demo__text">Оформление ВНЖ в Украине осуществляют органы Государственной миграционной службы. Прием
             иностранцев
             осуществляется ежедневно.</p>
           <h4>Обратите внимание на следующее:</h4>
@@ -265,23 +265,23 @@
                 class="fab fa-youtube"></i> youtube.com</a>
           </h4>
 
-          <p class="text">
+          <p class="demo__text">
             Продление ВНЖ осуществляется путем смены бланка ID-карты.<br>
             При этом важно, чтобы документы на продление ВНЖ
             были поданы не позднее <span>15-ти рабочих дней до конца срока действия</span>.
           </p>
-          <p class="text">Документы подаются аналогичные тем, что и при первичном оформлении + справка о
+          <p class="demo__text">Документы подаются аналогичные тем, что и при первичном оформлении + справка о
             регистрации места жительства.</p>
 
           <h4>Отказ в выдаче ВНЖ</h4>
-          <p class="text">В последнее время участились случаи отказов в выдаче временного ВНЖ на основании
+          <p class="demo__text">В последнее время участились случаи отказов в выдаче временного ВНЖ на основании
             подачи недостоверных сведений.</p>
-          <p class="text">В данном случае речь идет об указании в заявлении <span>адреса будущего места
+          <p class="demo__text">В данном случае речь идет об указании в заявлении <span>адреса будущего места
               проживания</span>, который при проведении проверки
             сотрудниками службы не подтверждается. Стоит отметить — такие действия являются совершенно незаконными, что
             подтверждается многочисленными решениями центрального аппарата ГМС о признании таких отказов незаконными.
           </p>
-          <p class="text">Мы советуем не терять надежду и обращаться за помощью квалифицированных юристов.
+          <p class="demo__text">Мы советуем не терять надежду и обращаться за помощью квалифицированных юристов.
           </p>
           <h3>Аннулирование ВНЖ</h3>
           <h4>Закон предусматривает несколько оснований для аннулирования ВНЖ, в т.ч.:</h4>
@@ -291,7 +291,7 @@
             <li>Просьба самого иностранца.</li>
             <li>Информация правоохранительных органов.</li>
           </ul>
-          <p class="text">После оформления ВНЖ, иностранец обязан в течении <span>30-ти дней зарегистрировать свое
+          <p class="demo__text">После оформления ВНЖ, иностранец обязан в течении <span>30-ти дней зарегистрировать свое
               место проживания</span> и, если оно отличается от того, с которым подавал документы, то уведомить ДМС.</p>
       </div>
       <!-- 5 -->
@@ -300,14 +300,20 @@
         <h3>ПВМЖ по квоте</h3>
       </label>
       <div class="subsection">
-        <h5>Перелік спеціальностей та вимог до кваліфікації спеціалістів і робітників, потреба в яких може бути
-          задоволена за рахунок імміграції у 2020 році</h5>
+        <h3>Перелік спеціальностей та вимог до кваліфікації спеціалістів і робітників, потреба в яких може бути
+          задоволена за рахунок імміграції у 2020 році</h3>
         <div class="links">
           <a href="https://thedigital.gov.ua/storage/uploads/files/page/%D0%A2%D0%B0%D0%B1%D0%BB%D0%B8%D1%86%D1%8F%20%D0%BA%D0%B2%D0%B0%D0%BB%D1%96%D1%84.pdf"
             class="link" target="blank"><i class="fas fa-link"></i> thedigital.gov.ua/storage</a>
         </div>
+
+        <h3>Руководство получения ПМЖ по квоте</h3>
+        <p class="demo__text">Google Drive с двумя файлами, docx и pdf
+          <a href="https://drive.google.com/drive/u/0/folders/1dNY2Kj2jyLfgab8VaF9CS1w-rPxkVKVX" class="link"
+            target="blank"> <i class="fab fa-google-drive"></i> drive.google.com</a>
+        </p>
         <h4>Инструкция от пользователя <span>@N I</span></h4>
-        <p class="text">
+        <p class="demo__text">
           0. Подаваться на «Дозвіл на імміграцію» может только <span>сам
             высококвалифицированный специалист</span>, если едете с семьёй, то они могут подать ТОЛЬКО на основе вашего
           разрешения. Как быть со временным проживанием далее напишу.
@@ -345,7 +351,7 @@
           </li>
           <h4>Заключение психиатра во Львове - форма 122-2/о!</h4>
           <h4><span>Опыт пользователя @FrodoBagginsBel</span></h4>
-          <p class="text">Нужную клинику помогли найти адвокаты (<i class="fab fa-telegram"></i> @conflictqueen),
+          <p class="demo__text">Нужную клинику помогли найти адвокаты (<i class="fab fa-telegram"></i> @conflictqueen),
             которые помогают нам с процессом подачи (за что им
             огромное спасибо!!!)<br>
             Клиника "Санолайф"
@@ -513,9 +519,10 @@
             года;</li>
           <li>для иностранцев (нерезидента) – на период до 1-го года.</li>
         </ol>
-        <p class="text"><span>* Следует обратить внимание, что юридическое понятие «резидент» абсолютно не тождественно
+        <p class="demo__text"><span>* Следует обратить внимание, что юридическое понятие «резидент» абсолютно не
+            тождественно
             понятию «гражданин».</span></p>
-        <p class="text">Обобщая положения Налогового кодекса Украины, резидентом является лицо, чьи экономические
+        <p class="demo__text">Обобщая положения Налогового кодекса Украины, резидентом является лицо, чьи экономические
           интересы (место работы или
           место регистрации бизнеса) находится в Украине. Иностранец, проживающий и получающий доход в Украине, является
           резидентом, а гражданин Украины, постоянно работающий за границей – нерезидент.</p>
@@ -533,18 +540,18 @@
         <h3>Инструкция и вопросы</h3>
       </label>
       <div class="subsection">
-        <p class="text">
+        <p class="demo__text">
           <a href="https://drive.google.com/file/d/1BzrZUdYqgmwsnT6HHmolXoXesvite4cE/view" class="link" target="blank">
             <i class="fas fa-link"></i>drive.google.com - про эмиграцию в Украину</a>
         </p>
-        <p class="text">Документ делится на 2 части:</p>
+        <p class="demo__text">Документ делится на 2 части:</p>
         <ol>
           <li>Инструкция</li>
           <li>Вопросы - Ответы (из телеграм чатов)</li>
         </ol>
-        <p class="text">Документ не является единственным возможным
+        <p class="demo__text">Документ не является единственным возможным
           руководством к действия и может быть не актуален.</p>
-        <p class="text">Перепроверяйте данные на указанных и официальных
+        <p class="demo__text">Перепроверяйте данные на указанных и официальных
           сайтах, а также задавайте вопросы в чатах.</p>
         <h4>Чаты:</h4>
         <ol>
@@ -567,12 +574,12 @@
         <h5>
           Актуальное практическое руководство по переезду из Беларуси в Украину в 2021 году.
         </h5>
-        <p class="text">
+        <p class="demo__text">
           Написано под айтишников, но будет полезно к ознакомлению всем белорусам:
           <a href="https://telegra.ph/Pereezd-ajtishnika-iz-Belarusi-v-Ukrainu-2021-01-13" class="link"
             target="blank">telegra.ph/Pereezd-ajtishnika...</a>
         </p>
-        <p class="text">
+        <p class="demo__text">
           Как белорусским IT-специалистам переехать в Украину:
           <a href="https://belarustoukraine.com/" class="link" target="blank"><i
               class="fas fa-link"></i>https://belarustoukraine.com</a>
