delete-meta-robots

--- a/entry.html
+++ b/entry.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Въезд в Украину, правила въезда и основания">
     <meta name="keywords" content="Основания, тест, Вдома, сертификат">
     <!-- Запрет индексации страницы полностью -->
-    <meta name="robots" content="none">
+    <!-- <meta name="robots" content="none"> -->
     <script src="https://kit.fontawesome.com/98db508811.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
