--- a/rent.html
+++ b/rent.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Как снять квартиру, найти жилье, арендовать">
   <meta name="keywords" content="Квартиры, аренда, поиск жилья, без агента">
   <!-- Запрет индексации страницы полностью -->
-  <meta name="robots" content="none">
+  <!-- <meta name="robots" content="none"> -->
   <script src="https://kit.fontawesome.com/98db508811.js" crossorigin="anonymous"></script>
   <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.gstatic.com">
