--- a/visas.html
+++ b/visas.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Как получить польскую визу во Львове, как получить гуманитарную визу, визу PBH">
     <meta name="keywords" content="Виза, польская, гуманитарная виза, виза для айти, виза PBH">
     <!-- Запрет индексации страницы полностью -->
-    <meta name="robots" content="none">
+    <!-- <meta name="robots" content="none"> -->
     <script src="https://kit.fontawesome.com/98db508811.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
