--- a/fop.html
+++ b/fop.html
@@ -8,7 +8,7 @@
     <meta name="description" content="ФОП и ИНН открытие ФОПа, получение ИНН">
     <meta name="keywords" content="ФОП, фоп, ИНН, 3 группа">
     <!-- Запрет индексации страницы полностью -->
-    <meta name="robots" content="none">
+    <!-- <meta name="robots" content="none"> -->
     <script src="https://kit.fontawesome.com/98db508811.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
