--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Главная страница сайта для беларусов Львова">
   <meta name="keywords" content="Львов, беларуская мова, кризисный центр, котакты, акция">
   <!-- Запрет индексации страницы полностью -->
-  <meta name="robots" content="none">
+  <!-- <meta name="robots" content="none"> -->
   <script src="https://kit.fontawesome.com/98db508811.js" crossorigin="anonymous"></script>
   <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
   <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
