--- a/legalisation.html
+++ b/legalisation.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Как оформить вид на жительство и какие докуметны нужны">
   <meta name="keywords" content="ВНЖ, ВВНЖ, ПВМЖ, квоты, апостиль, сроки пребывания, практическое руководство, перевод">
   <!-- Запрет индексации страницы полностью -->
-  <meta name="robots" content="none">
+  <!-- <meta name="robots" content="none"> -->
   <script src="https://kit.fontawesome.com/98db508811.js" crossorigin="anonymous"></script>
   <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
   <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
