--- a/lviv.html
+++ b/lviv.html
@@ -9,7 +9,7 @@
     <meta name="keywords"
         content="Транспорт, такси, кафе, сады, школы, отели, хостел, медцентр, питьевая вода, котел, тест COVID, жд">
     <!-- Запрет индексации страницы полностью -->
-    <meta name="robots" content="none">
+    <!-- <meta name="robots" content="none"> -->
     <script src="https://kit.fontawesome.com/98db508811.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
