--- a/money.html
+++ b/money.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Где открыть счет в банке, как перевести деньги, снятия наличных">
     <meta name="keywords" content="Банк, счет, карточка, банкомат, Альфа, перевод, Райффайзен, SWIFT">
     <!-- Запрет индексации страницы полностью -->
-    <meta name="robots" content="none">
+    <!-- <meta name="robots" content="none"> -->
     <script src="https://kit.fontawesome.com/98db508811.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
