--- a/vaccinations.html
+++ b/vaccinations.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Как вакцинироваться без внж, только по паспорту, как получить сертификат">
     <meta name="keywords" content="Вакцинация, ковид, сертификат, только с паспортом, без внж, вакцинироваться">
     <!-- Запрет индексации страницы полностью -->
-    <meta name="robots" content="none">
+    <!-- <meta name="robots" content="none"> -->
     <script src="https://kit.fontawesome.com/98db508811.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
