--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <h3>Курсы беларускай<br>
                 і ўкраінскай мовы<br>
                 <span>ў Львове</span></h3>
-              <p class="text">Кожную няделю<br>
+              <p class="description">Кожную няделю<br>
                 <span>Беларуская<br>
                   а 15:00<br>
                   <br>
@@ -83,7 +83,7 @@
               <h3>НЯДЗЕЛЬНАЯ АКЦЫЯ<br>
                 САЛІДАРНАСЦІ<br>
                 БЕЛАРУСАЎ ЛЬВОВА</h3>
-              <p class="text">Кожную няделю, 13:00<br>
+              <p class="description">Кожную няделю, 13:00<br>
                 Помнік Тарасу Шаўчэнку
               </p>
             </div>
@@ -94,7 +94,7 @@
             <div class="description crysis">
               <img src="img/Logo-bkc.png" alt="logo-bkc" class="crysis__logo">
               <h3>Беларускі крызісны цэнтр</h3>
-              <p class="text">у Львове дапамагае беларусам,<br>
+              <p class="description">у Львове дапамагае беларусам,<br>
                 якія змушаны былі з'ехаць з Радзімы
               </p>
             </div>
