--- a/lviv.html
+++ b/lviv.html
@@ -232,50 +232,86 @@
             </div>
             <h4>Самые популярные частные медицинские центры Львова</h4>
             <ul>
-                <li><span>Медцентр Св. Параскеви</span> - м. Львів, вул. Тернопільська, 21б;<br>
-                    <p class="text">вул. Заводська, 7;<br>
-                        проспект Червоної Калини, 64;<br>
-                        вул. Кульпарківська, 135.<br>
-                        <a href="https://www.medcenter.lviv.ua/" class="link" target="blank"><i
-                                class="fas fa-link"></i>medcenter.lviv.ua</a>
-                    </p>
+                <li><span>Медцентр Св. Параскеви</span>
+                    <ul>
+                        <li><a href="https://www.medcenter.lviv.ua/" class="link" target="blank"><i
+                                    class="fas fa-link"></i>medcenter.lviv.ua</a></li>
+                        <li>м. Львів, вул. Тернопільська, 21б</li>
+                        <li>вул. Заводська, 7</li>
+                        <li>проспект Червоної Калини, 64</li>
+                        <li>вул. Кульпарківська, 135</li>
+                    </ul>
                 </li>
-                <li><span>Medicover</span> - ул. Антоновича, 102;<br>
-                    <p class="text">ул. Стрийская, 204; ул. проф. Ковалика.<br>
-                        <a href="https://medicover.ua/ru/" class="link" target="blank"><i
-                                class="fas fa-link"></i>medicover.ua</a>
-                    </p>
+                <li><span>Medicover</span>
+                    <ul>
+                        <li><a href="https://medicover.ua/ru/" class="link" target="blank"><i
+                                    class="fas fa-link"></i>medicover.ua</a></li>
+                        <li>ул. Антоновича, 102</li>
+                        <li>ул. Стрийская, 204; ул. проф. Ковалика</li>
+                    </ul>
                 </li>
-                <li><span>Лікарня ЕКСПЕРТ</span><br>
-                    <p class="text">
-                        +38 097 22 33 911<br>
-                        +38 073 22 33 911<br>
-                        вулиця Шолом Алейхема, 11<br>
-                        <a href="https://experthospital.com.ua/" class="link" target="blank"><i
-                                class="fas fa-link"></i>experthospital.com.ua</a>
-                    </p>
+                <li><span>Лікарня ЕКСПЕРТ</span>
+                    <ul>
+                        <li><a href="https://experthospital.com.ua/" class="link" target="blank"><i
+                                    class="fas fa-link"></i>experthospital.com.ua</a></li>
+                        <li><a href="tel: +380972233911" class="link" target="blank"><i class="fas fa-phone"></i>+38 097
+                                22 33 911</a></li>
+                        <li>
+                            <a href="tel: +380732233911" class="link" target="blank"><i class="fas fa-phone"></i>
+                                +38 073 22 33 911</a>
+                        </li>
+                        <li>вулиця Шолом Алейхема, 11</li>
+                    </ul>
                 </li>
-                <li><span>Oxford medical</span> - пр. В. Черновола, 45А/9;<br>
-                    <p class="text">
-                        ул. Зубривская, 21.<br>
-                        <a href="https://lviv.oxford-med.com.ua" class="link" target="blank"><i
-                                class="fas fa-link"></i>lviv.oxford-med.com.ua</a>
-                    </p>
-                <li><span>Мережа стоматологій «Пародент»</span> - вул. Глибока, 4;<br>
-                    <p class="text">
-                        вул. Личаківська,52;<br>
-                        вул. Чайковського, 29;<br>
-                        вул. Шевченка, 87А.<br>
-                        <a href="https://parodent.com.ua/ru/" class="link" target="blank"><i
-                                class="fas fa-link"></i>parodent.com.ua</a>
-                    </p>
+                <li><span>Oxford medical</span>
+                    <ul>
+                        <li><a href="https://lviv.oxford-med.com.ua" class="link" target="blank"><i
+                                    class="fas fa-link"></i>lviv.oxford-med.com.ua</a>
+                        <li>пр. В. Черновола, 45А/9</li>
+                        <li>ул. Зубривская, 21.</li>
+                    </ul>
                 </li>
-                <li><span>Мережа дитячих медичних центрів «Веселка»</span> - вул. Червоної Калини, 68;<br>
-                    <p class="text">
-                        вул. Щирецька, 36.<br>
-                        <a href="https://veselka.clinic/" class="link" target="blank"><i
-                                class="fas fa-link"></i>veselka.clinic/</a>
-                    </p>
+                <li><span>Мережа дитячих медичних центрів «Веселка»</span>
+                    <ul>
+                        <li><a href="https://veselka.clinic/" class="link" target="blank"><i
+                                    class="fas fa-link"></i>veselka.clinic/</a></li>
+                        <li>вул. Червоної Калини, 68</li>
+                        <li>вул. Щирецька, 36.</li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <div class="about__item">
+            <div class="about__title">
+                <i class="fas fa-tooth"></i>
+                <h3>Стоматологи</h3>
+            </div>
+            <h4>Стоматологии и стоматологи, которых рекомендовали в чате:</h4>
+            <ul>
+                <li><span>Стоматолог Андрей Васильевич</span>
+                    <ul>
+                        <li><a href="tel: +380 97942 95 45" class="link" target="blank"><i class="fas fa-phone"></i>+380
+                                97
+                                942-95-45</a></li>
+                        <li>ул.Балабана</li>
+                    </ul>
+                </li>
+                <li><span>Мережа стоматологій «Пародент»</span>
+                    <ul>
+                        <li><a href="https://parodent.com.ua/ru/" class="link" target="blank"><i
+                                    class="fas fa-link"></i>parodent.com.ua</a></li>
+                        <li>вул. Глибока, 4</li>
+                        <li>вул. Личаківська,52</li>
+                        <li>вул. Чайковського, 29</li>
+                        <li>вул. Шевченка, 87А</li>
+                    </ul>
+                </li>
+                <li><span>PRYTULA DENTAL STUDIO</span>
+                    <ul>
+                        <li><a href="https://prytula.lviv.ua/" class="link" target="blank"><i
+                                    class="fas fa-link"></i>prytula.lviv.ua</a></li>
+                        <li>вул.Виговського 5Б</li>
+                    </ul>
                 </li>
             </ul>
         </div>
@@ -342,32 +378,6 @@
                 <a href="https://drive.google.com/file/d/1hY2klW6bk1ywTj1ItyN6lvqTnLaKARpM/view?usp=sharing"
                     class="link" target="blank"><i class="fas fa-link"></i>drive.google.com/file</a>
             </p>
-        </div>
-        <div class="about__item">
-            <div class="about__title">
-                <i class="fas fa-vial"></i>
-                <h3>Где сдать тест на COVID-19 в РБ</h3>
-            </div>
-            <ul>
-                <li><a href="https://covidtest.by/" class="link" target="blank"><i
-                            class="fas fa-link"></i>covidtest.by</a><br>
-                    Можно онлайн записаться в одну из лаб, и если экспресс (утром сдать, вечером получить результат)
-                    там доплаты и около 100р выходит. если на след день, то гдето 60р с доставкой.
-                    Я, например, выбирала лабу которая на долгиновский тракт 160 <span>@Валошка</span>.
-                </li>
-                <li><a href="https://rcheph.by/uslugi/grazhdanam/testirovanie-na-covid-19/" class="link"
-                        target="blank"><i class="fas fa-link"></i>rcheph.by/uslugi...</a><br>
-                    здесь онлайн запись, в субботу результат вечером можно забрать, т.е. сегодня на сегодня получается.
-                    И цена 45 руб <span>@Malpachka</span>.
-                </li>
-                <li>
-                    Самый дешевый вариант - это центры эпидемиологии в Минске или областных городах. Стоит 40 рублей.
-                    Запись можно осуществить через талон бай. В Минске результат на след день выдают (мне сказали так) в
-                    Бресте результат выдают в тот же день , если сдавали тест в первой половине дня 8:30-12:30 работают
-                    и в сб ,и вс.
-                    Выдают в формате необходимом для выезда зарубеж <span>@Ivan</span>.
-                </li>
-            </ul>
         </div>
     </section>
 </body>
