--- a/lviv.html
+++ b/lviv.html
@@ -288,11 +288,10 @@
             </div>
             <h4>Стоматологии и стоматологи, которых рекомендовали в чате:</h4>
             <ul>
-                <li><span>Стоматолог Андрей Васильевич</span>
+                <li><span>Стоматолог Андрей Васильевич</span> советует @Oksana_Fylypchak
                     <ul>
-                        <li><a href="tel: +380 97942 95 45" class="link" target="blank"><i class="fas fa-phone"></i>+380
-                                97
-                                942-95-45</a></li>
+                        <li><a href="tel: +380 97942 95 45" class="link" target="blank"><i class="fas fa-phone"></i>
+                                +380 97 942-95-45</a></li>
                         <li>ул.Балабана</li>
                     </ul>
                 </li>
@@ -306,11 +305,32 @@
                         <li>вул. Шевченка, 87А</li>
                     </ul>
                 </li>
-                <li><span>PRYTULA DENTAL STUDIO</span>
+                <li><span>PRYTULA DENTAL STUDIO</span> советует @Анабанана
                     <ul>
                         <li><a href="https://prytula.lviv.ua/" class="link" target="blank"><i
                                     class="fas fa-link"></i>prytula.lviv.ua</a></li>
                         <li>вул.Виговського 5Б</li>
+                    </ul>
+                </li>
+                <li><span>Назар</span> советует @helbyf
+                    <ul>
+                        <li><a href="tel: +380981081797" class="link" target="blank"><i class="fas fa-phone"></i>
+                                +380 98 108-17-97</a></li>
+                        <li>ул.Городоцька</li>
+                    </ul>
+                </li>
+                <li><span>«Рікота»</span> советует @wladmalin
+                    <ul>
+                        <li><a href="https://rikota.com.ua/" class="link" target="blank"><i
+                                    class="fas fa-link"></i>rikota.com.ua</a></li>
+                        <li>общая/детская стоматология Львів, просп. Свободи, 13а (Гранд готель)</li>
+                    </ul>
+                </li>
+                <li><span>Андрей Гумецкий</span> советует @wladmalin
+                    <ul>
+                        <li><a href="tel: +380677011761" class="link" target="blank"><i class="fas fa-phone"></i>
+                                +380 67 701-17-61</a></li>
+                        <li>Коронки/импланты</li>
                     </ul>
                 </li>
             </ul>
