--- a/vaccinations.html
+++ b/vaccinations.html
@@ -111,8 +111,11 @@
         <h4>Инструкция по вакцинации и получении международного свидетельства о вакцинации без декларации с семейным
             доктором от пользователя <span>@berestwa</span>:</h4>
         <h5><span>Реквизиты:</span> <br>
-            4-я міська клінічна лікарня м.Лівова
-            Консультація сімейного лікаря (#2 відділення)
+            <ul>
+                <li>4-я міська клінічна лікарня м.Лівова</li>
+                <li>вулиця Ярослава Стецька, 3</li>
+                <li>Консультація сімейного лікаря (#2 відділення)</li>
+            </ul>
         </h5>
         <ul>
             <li>Каждый раз при получении вакцины я платил 145 грн в терминале внутри поликлиники. Заходил на вакцинацию
