--- a/vaccinations.html
+++ b/vaccinations.html
@@ -110,11 +110,12 @@
         <h3>Где вакцинироваться от коронавируса во Львове</h3>
         <h4>Инструкция по вакцинации и получении международного свидетельства о вакцинации без декларации с семейным
             доктором от пользователя <span>@berestwa</span>:</h4>
-        <h5><span>Реквизиты:</span> <br>
-            <p class="text">4-я міська клінічна лікарня м.Лівова</p>
-            <p class="text">вулиця Ярослава Стецька, 3</p>
-            <p class="text">Консультація сімейного лікаря (#2 відділення)</p>
-        </h5>
+        <h5><span>Реквизиты:</span></h5>
+        <ul class="contacts">
+            <li>4-я міська клінічна лікарня м.Лівова</li>
+            <li>вулиця Ярослава Стецька, 3</li>
+            <li>Консультація сімейного лікаря (#2 відділення)</li>
+        </ul>
         <ul>
             <li>Каждый раз при получении вакцины я платил 145 грн в терминале внутри поликлиники. Заходил на вакцинацию
                 в 3 кабинет с чеком оплаты.
