--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <h3>Курсы беларускай<br>
                 і ўкраінскай мовы<br>
                 <span>ў Львове</span></h3>
-              <p class="description">Кожную няделю<br>
+              <p class="description">Кожную нядзелю<br>
                 <span>Беларуская<br>
                   а 15:00<br>
                   <br>
@@ -83,7 +83,7 @@
               <h3>НЯДЗЕЛЬНАЯ АКЦЫЯ<br>
                 САЛІДАРНАСЦІ<br>
                 БЕЛАРУСАЎ ЛЬВОВА</h3>
-              <p class="description">Кожную няделю, 13:00<br>
+              <p class="description">Кожную нядзелю, 13:00<br>
                 Помнік Тарасу Шаўчэнку
               </p>
             </div>
