--- a/index.html
+++ b/index.html
@@ -122,7 +122,19 @@
         <i class="fab fa-telegram"></i>Українська мова для білорусів</a>
     </div>
     <p class="text">Также акции в воскресенье не разрешены.</p> -->
-
+    <div class="container restriction">
+      <h3>На время карантинных ограничений беларуская и украинская мовы проходят онлайн:</h3>
+      <div class="links">
+        <a href="https://t.me/belmova_lvou" class="link" target="blank">
+          <i class="fab fa-telegram"></i>Беларуская мова ў Львове</a>
+      </div>
+      <div class="links">
+        <a href="https://t.me/ukrmova_belarus" class="link" target="blank">
+          <i class="fab fa-telegram"></i>Українська мова для білорусів</a>
+      </div>
+      <h3>Акции солидарности по воскресеньям будут анонсироваться в телеграм-чате <a href="https://t.me/bellviv" class="link" target="blank"><i class="fab fa-telegram"></i> Беларусы ў Львове</a>.</h3>
+      <!-- <img class="redzone__image" src="./img/redzone.jpg" alt="Червона зона з 26 січня на Львівщині"> -->
+    </div>
   </section>
   <footer class="container">
     <div class="footer__section">
