--- a/legalisation.html
+++ b/legalisation.html
@@ -355,7 +355,7 @@
             которые помогают нам с процессом подачи (за что им
             огромное спасибо!!!)<br>
             Клиника "Санолайф"
-            Адрес: вулиця Тернопільська, 19, Львів, Львівська область, 79000
+            Адрес: вулиця Таманська, 6, Львів, Львівська область, Україна, 79000
             068 775 7710<br>
             Там сделали и психиатра(150грн) и нарколога(200грн) сразу!<br>
             С этими (и другими из списка) документами в областной поликлинике получили 028/о. (Спасибо <i
